main phono news buttons

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -195,7 +195,7 @@
                 {%csrf_token%}
                 <div class="modal-header">
                     <h5 class="modal-title" >
-                        Напишите нам!
+                        Напишите нам
                     </h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
                     
