--- a/app/static/app/content/site.css
+++ b/app/static/app/content/site.css
@@ -100,7 +100,12 @@ section {
     padding-top:0px;
 }
 
-
+.our-name img{
+    height: auto;
+    width: 100%;
+    max-height: 100%;
+    background-size: cover;
+    }
 
 .main-text, .main-contacts{
      /*padding:5px 5px 5px 50px;*/
@@ -249,8 +254,8 @@ section {
 .main-text .btn {
     font-size:32px;
 }
-.main-text .btn.btn-small {
-    /*font-size:18px;*/
+.main-text .btn{
+    font-family: Candara;
 }
 
 
@@ -259,7 +264,7 @@ section {
 {
     background-color:#af183c;
     border-color:#af183c;
-    color:#000;
+    color:#fff;
     cursor: pointer;
 }
 
@@ -656,8 +661,11 @@ margin-left:0px;
 
 .albums-list .card {
     background-color: #292b2c;
-    margin:17px;
+    margin:15px;
     float:left;
+}
+.info-section .albums-list .card{
+    margin:20px;
 }
 
 .breadcrumb{
@@ -725,7 +733,7 @@ background-color: #060606;
 border-color: #af183c;
 }
 
-.form-control:focus{
+.order-section .form-control:focus{
     background-color:rgba(0,0,0,0.8);
     color:#fff;
 }
@@ -882,7 +890,8 @@ min-height: 50px;
 }
 
 .card.sidebar {
- background-color:#292b2c
+    background-color:#292b2c;
+    margin-top: 17px;
 }
 .sidebar .card-title{
     color:#fff;
