--- a/app/templates/app/layout2.html
+++ b/app/templates/app/layout2.html
@@ -15,7 +15,14 @@
     </div>
     <div class="col-md-3">
         {% block content_side %}
-
+<div class="card sidebar" >
+          <h4 class="card-title">Каталог</h4>
+        <nav class="nav flex-column">
+        {%for item in album_list%}
+            <a class="nav-link" href={{item.get_absolute_url}}> {{item.title}}</a>
+        {%endfor%}
+        </nav>
+            </div>
         
         {% endblock %}
     </div>
