--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -211,12 +211,15 @@
                         <input type="email" class="form-control" id="inputEmail3" placeholder="e-mail">
                     </div>
                     <div class="form-group">
-                        <textarea class="form-control" id="inputDescr" placeholder="описание заказа" rows="4"></textarea>
+                        <textarea class="form-control" id="inputDescr" placeholder="
+                                  
+                                  
+описание заказа" rows="4"></textarea>
                     </div>
 
                 </div>
                 <div class="modal-footer modal-footer-form">
-                    <button type="submit" class="btn btn-primary">Отправить заявку</button>
+                    <button type="submit" class="btn btn-primary">отправить заявку</button>
                 </div>
             </form>
                 </div>
