--- a/app/static/app/content/site.css
+++ b/app/static/app/content/site.css
@@ -1,4 +1,4 @@
-﻿body, html {
+body, html {
     /*height: 100%;*/
 }
 
@@ -78,13 +78,23 @@ section {
     padding-bottom: 60px;
 }
 
+.section-advantages{
+    background-color:#000;
+    color:#fff;
+    margin-top: -20px;
+}
+.card{
+    color:#fff;
+    
+}
+
 .main-section{
-    padding-bottom: 120px;
+    /* padding-bottom: 120px; */
 }
 
 .main-section{
     /*font-family:'MS Gothic';*/
-    /*padding-top: 40px;*/
+    /* padding-top: 40px; */
     display:flex;
 }
 
@@ -114,7 +124,7 @@ section {
 }
 
 .main-text-title{
-    padding-left:230px;
+    padding-left: 97px;
 }
 
 .main-contacts{
@@ -133,7 +143,7 @@ section {
 }
 
 .main-tel{
-    font-size: 40px;
+    font-size: 30px;
     letter-spacing: -2px;
     text-shadow: rgb(160, 71, 90) 10px 1px 20px;
     /*text-shadow: 0px 0px 2px #FFFFFF, 0px 0px 4px #ffffde;*/
@@ -141,14 +151,14 @@ section {
 }
 
 .main-email{
-     font-size: 30px;
+     font-size: 25px;
      text-shadow: rgb(160, 71, 90) 10px 1px 20px;
      /*letter-spacing: -2px;*/
      /*text-shadow: 0px 0px 1px #FFFFFF, 0px 0px 2px #ffffde;*/
  }
 
 .our-name{
-    margin-top:-100px;
+    margin-top: -132px;
     /*top: 20px;
     left: 100px;*/
     font-size: 130px;
@@ -163,11 +173,10 @@ section {
     text-shadow:  #F51A49 3px 1px 20px;
     /*text-shadow: 0px 0px 4px #FFFFFF, 0px 0px 16px #ffffde;*/
     /*text-shadow: 0px 0px 4px #fed480, 0px 0px 16px #fed480;*/
-    
 }
 
 .our-name-descr{
-    font-size: 30px;
+    font-size: 21px;
     /*font-family: 'OdessaScript', 'El Messiri', sans-serif;*/
     font-family: Candara;
     /*font-style: italic;*/
@@ -175,7 +184,7 @@ section {
     color: #fff;
     text-align:right;
     font-style: italic;
-    padding: 30px;
+    padding-top: 30px;
 }
 
 .our-name-btn{
@@ -185,7 +194,7 @@ section {
 
 .info-section, .news-section 
 {
-   background-color: rgb(25,26,28);
+   background-color: rgb(255, 255, 255);
 }
 
 .order-section, .contacts-section
@@ -252,7 +261,7 @@ section {
     
 }
 .main-text .btn {
-    font-size:32px;
+    font-size: 20px;
 }
 .main-text .btn{
     font-family: Candara;
@@ -280,14 +289,17 @@ section {
 }
 }
 
+.news-section .section-title{
+    color: rgb(0, 0, 0);
+}
 .section-title{
-    color: rgb(255, 255, 255);;
+    color: rgb(255, 255, 255);
     font-size:42pt;
-   padding:25px
+    padding:25px;
 }
 
 .container-content{
-    color:#fff;
+    /* color:#fff; */
     /*padding-top:40px;*/
 }
 
@@ -303,7 +315,7 @@ section {
     color:#af183c;
 }
 .about-us-main-descr{
-    font-size:28px;
+    font-size: 21px;
     word-wrap: break-word;
     text-align: center;
 }
@@ -829,12 +841,11 @@ margin-bottom:100px;
 }
 
 
-.fixed-top{
-min-height: 50px;
-}
+.fixed-top{min-height: 50px;
+background-color: #000000!important; }
 
 .main-text-title.subtitle{
-    width: 50%;
+    width: 61%;
 }
 
 @media (max-width: 992px){
