add slug and desc

--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="yandex-verification" content="4c713284b57adb6f" />
-        <meta name="description" content="Ходуожественная ковка в перми. Изготовление кованых изделий на заказ. Качественные кованые изделия по разумной цене">
+        <meta name="description" content="{%if desctiption%} {{description}}{%else%}{{description_d}}{%endif%}">
         <meta name="keywords" content="Ходуожественная ковка в перми. Изготовление кованых изделий на заказ. Качественные кованые изделия по разумной цене">
         <title>{{ title }}</title>
         <style> body{background-color:#000}</style>
