--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -83,26 +83,9 @@
 
     <form class="form-horizontal form-order" action="/sender" method="POST" role="form">
         {%csrf_token%}
-        <div class="modal-body">
-            <div class="form-group">
-                <input type="text" class="form-control" id="inputName" placeholder="имя">
-            </div>
-            <div class="form-group">
-                <input type="tel" class="form-control" id="inputTel" placeholder="телефон">
-            </div>
-            <div class="form-group">
-                <input type="email" class="form-control" id="inputEmail3" placeholder="e-mail">
-            </div>
-            <div class="form-group">
-                <textarea class="form-control" id="inputDescr" placeholder="
-
-
-описание заказа" rows="4"></textarea>
-            </div>
-
-        </div>
+        {{form}}
         <div class="modal-footer modal-footer-form">
-            <button type="submit" class="btn btn-primary">отправить заявку</button>
+            <button type="submit" class="btn btn-primary btn-send">отправить заявку</button>
         </div>
     </form>
 </div>
@@ -191,7 +174,7 @@
     <div class="modal fade modalform" id="callbackModal">
           <div class="modal-dialog" role="document">
                   <div class="modal-content">
-            <form class="form-horizontal " action="/sender" method="POST" role="form">
+                      <form class="form-horizontal " action="{%url 'sender'%}" method="POST" role="form">
                 {%csrf_token%}
                 <div class="modal-header">
                     <h5 class="modal-title" >
@@ -201,25 +184,10 @@
                     
                 </div>
                 <div class="modal-body">
-                    <div class="form-group">
-                        <input type="text" class="form-control" id="inputName" placeholder="имя">
-                    </div>
-                    <div class="form-group">
-                        <input type="tel" class="form-control" id="inputTel" placeholder="телефон">
-                    </div>
-                    <div class="form-group">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="e-mail">
-                    </div>
-                    <div class="form-group">
-                        <textarea class="form-control" id="inputDescr" placeholder="
-                                  
-                                  
-описание заказа" rows="4"></textarea>
-                    </div>
-
+                    {{form}}
                 </div>
                 <div class="modal-footer modal-footer-form">
-                    <button type="submit" class="btn btn-primary">отправить заявку</button>
+                    <button type="submit" class="btn btn-primary btn-send">отправить заявку</button>
                 </div>
             </form>
                 </div>
@@ -301,7 +269,27 @@ $(document).ready(function(){
 		$(this).remove();
 	});
 });
-    </script>
+
+$('label').hide()
+
+</script>
+
+<script>
+$('.btn-send').click(function(){
+    alert(1)
+         event.preventDefault();
+    var form = $(this).parents('form:first');
+    form.ajaxSubmit({url: '/sender/', 
+        type: 'post',
+        success:function(){
+            $("#succesModal").modal('toggle');
+            return false;
+        }});
+    return false
+});
+</script>
+
+
 	
 	
     {% endblock %}
