--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -18,6 +18,7 @@
         <script src="{% static 'app/scripts/modernizr-2.6.2.js' %}"></script>
         <script src="{% static 'app/scripts/jquery-1.10.2.js' %}"></script>
         <script src="{% static 'app/scripts/jquery.fancybox.js' %}"></script>
+        <script src="{% static 'app/scripts/jquery.form.min.js' %}"></script>
         <script src="{% static 'app/scripts/jquery.fancybox.pack.js' %}"></script>
     </head>
 
